Added queryKundeUser. wip: Possible problem with Ids.

--- a/Ticketing/API/Ticketing2.GraphQL.Web/Todo.txt
+++ b/Ticketing/API/Ticketing2.GraphQL.Web/Todo.txt
@@ -3,3 +3,11 @@
 Id alle auf GUID umstellen.
 
 
+
+BUG:
+Ein Ticket wird durch einen Kunden gekauft.
+Das KundenUser Objekt bekommt einen zusätzlichen Eintrag in der purchasedTickets Liste. 
+
+Das VeranstatlungsObjekte sollte das auch bekommen, aber bekommt es nicht.
+
+// das ist wieder ein Id Problem...
