Added Support for uint Types.

--- a/Ticketing/API/Ticketing2.GraphQL.Web/Todo.txt
+++ b/Ticketing/API/Ticketing2.GraphQL.Web/Todo.txt
@@ -11,3 +11,6 @@ Das KundenUser Objekt bekommt einen zusätzlichen Eintrag in der purchasedTicket
 Das VeranstatlungsObjekte sollte das auch bekommen, aber bekommt es nicht.
 
 // das ist wieder ein Id Problem...
+
+
+uint graphql support einrichten
