Veranstaltung anlegen jetzt im Menü

--- a/Frontend/src/assets/i18n/en-US.json
+++ b/Frontend/src/assets/i18n/en-US.json
@@ -75,6 +75,7 @@
     "menu-level.level-1-1.level-2-1.level-3-1": "Level 3.1",
     "menu-level.level-1-1.level-2-1.level-3-1.level-4-1": "Level 4.1",
     "veranstalterveranstaltungen": "My Events",
+    "veranstaltung-anlegen": "Neue Veranstaltung",
     "permissions": "Permissions",
     "permissions.role-switching": "Role Switching",
     "permissions.route-guard": "Route Guard",
